[gd_scene load_steps=2 format=3 uid="uid://bmpqxc7iasbud"]

[ext_resource type="Script" uid="uid://dfqfxvmxnnee5" path="res://scripts/ShopScene.gd" id="1_shop"]

[node name="ShopScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184, 0.106, 0.078, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="MainContainer/Header"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "‚Üê Volver"

[node name="TitleLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üõí TIENDA"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "üí∞ $0"

[node name="TabContainer" type="TabContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Generadores" type="ScrollContainer" parent="MainContainer/TabContainer"]
layout_mode = 2
metadata/_tab_name = "‚öôÔ∏è Generadores"
metadata/_tab_index = 0

[node name="GeneratorsList" type="VBoxContainer" parent="MainContainer/TabContainer/Generadores"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Mejoras" type="ScrollContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "‚¨ÜÔ∏è Mejoras"
metadata/_tab_index = 1

[node name="UpgradesList" type="VBoxContainer" parent="MainContainer/TabContainer/Mejoras"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Equipamiento" type="ScrollContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "üèóÔ∏è Equipamiento"
metadata/_tab_index = 2

[node name="EquipmentList" type="VBoxContainer" parent="MainContainer/TabContainer/Equipamiento"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Recetas" type="ScrollContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "üìú Recetas"
metadata/_tab_index = 3

[node name="RecipesList" type="VBoxContainer" parent="MainContainer/TabContainer/Recetas"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
